# 517-robotics

./: commands.sh
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin
devel/.private/fetch_ikfast_plugin/: .catkin
devel/.private/fetch_ikfast_plugin/lib/pkgconfig/: fetch_ikfast_plugin.pc
devel/.private/joint_state_reader/: .catkin
devel/lib/pkgconfig/: fetch_ikfast_plugin.pc
devel/share/fetch_ikfast_plugin/cmake/: fetch_ikfast_pluginConfig-version.cmake  fetch_ikfast_pluginConfig.cmake
logs/applications/: build.check.005.log.stderr
logs/simple_grasping/: build.make.010.log.stderr
src/cse481c/joint_state_reader/: CMakeLists.txt  package.xml
src/cse481c/joint_state_reader/src/joint_state_reader/: navigation.rviz  reader.py
src/fetch-picker/applications/: CMakeLists.txt  package.xml
src/fetch-picker/applications/launch/: nav_rviz.launch
src/fetch-picker/applications/maps/: playground.pgm  playground.yaml
src/fetch-picker/applications/scripts/: _arm_obstacle_demo.py  arm_demo.py  arm_no_obstacle_demo.py  arm_obstacle_with_divider_demo.py  base_demo.py  cart_arm_demo.py  check_cart_pose.py  combined_teleop.py  ee_pose_demo.py  head_demo.py  interactive_marker_demo.py  joint_reader_demo.py  keyboard_teleop.py  lab26_obstacles.py  launch_moveit.py  market_demo.py  navigation_demo.py  pregrasp_demo.py  robot_path_visualizer.py  robot_teleop.py  simple_divider_demo.py  simple_teleop.py  target_teleop.py  test_ikfast.py  torso_demo.py  transformation_demo.py
src/fetch-picker/robot_api/launch/: base_markers.launch
~/: .bashrc
(+13 files in other folders)
