<?xml version="1.0"?>
<package format="2">
  <name>joint_state_reader</name>
  <version>0.1.0</version>
  <description>The joint_state_reader package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  
  <export>
  </export>
</package>